# trips-ingestion

./: .gitignore  .secrets.toml  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  readme.md
SQL/: create_trips_log.sql
others/: create_csv.py
src/: config.py  csv_to_db.py  execute_db_script.py  file_functions.py
src/database/: postgres.py
trips/: main.py
